--- a/HealthApp/bin/AndroidManifest.xml
+++ b/HealthApp/bin/AndroidManifest.xml
@@ -23,7 +23,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginForm">
+            android:name=".AndroidTabActivity">
+        </activity>
+        <activity
+            android:name=".ProfileActivity">
+        </activity>
+        <activity
+            android:name=".CameraActivity">
+        </activity>
+        <activity
+            android:name=".MapActivity">
         </activity>
     </application>
 
