Changed the name of LoginForm.java to LoginFormActivity.java

--- a/HealthApp/AndroidManifest.xml
+++ b/HealthApp/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginForm">
+            android:name=".LoginFormActivity">
         </activity>
         <activity
             android:name=".AndroidTabActivity">
