--- a/HealthApp/AndroidManifest.xml
+++ b/HealthApp/AndroidManifest.xml
@@ -4,6 +4,21 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <permission
+        android:name="com.jamonek.healthapp.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+<uses-permission android:name="com.jamonek.healthapp.permission.MAPS_RECEIVE"/>
+<uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+<!-- The following two permissions are not required to use
+     Google Maps Android API v2, but are recommended. -->
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+ <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
@@ -22,21 +37,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginFormActivity">
-        </activity>
-		<activity
-            android:name=".AndroidTabActivity">
-        </activity>
-        <activity
-            android:name=".ProfileActivity">
-        </activity>
-        <activity
-            android:name=".CameraActivity">
-        </activity>
-        <activity
-            android:name=".MapActivity">
-        </activity>
+        <meta-data
+    android:name="com.google.android.maps.v2.API_KEY"
+    android:value="AIzaSyCxZYGZLT0_YkFHJJY_vd7jd3Y7GBNaLEA"/>
     </application>
 
 </manifest>
