--- a/HealthApp/bin/AndroidManifest.xml
+++ b/HealthApp/bin/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+         <activity
             android:name="com.jamonek.healthapp.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -36,6 +36,21 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginFormActivity">
+        </activity>
+		<activity
+            android:name=".AndroidTabActivity">
+        </activity>
+        <activity
+            android:name=".ProfileActivity">
+        </activity>
+        <activity
+            android:name=".CameraActivity">
+        </activity>
+        <activity
+            android:name=".MapActivity">
         </activity>
         <meta-data
     android:name="com.google.android.maps.v2.API_KEY"
